@@ -17,7 +17,7 @@ int setxattr(const char *pathname, const char *name, const void *value, size_t s
 int fsetxattr(int filedes, const char *name, const void *value, size_t size, u_int32_t position, int options);
 # local color UIDs
 int getgrouplist(const char *name, int basegid, int *groups, int *ngroups);
-int scandir(const char *path, struct dirent ***namelist, int (*filter)(struct dirent *), int (*compar)());
+int scandir(const char *path, struct dirent ***namelist, int (*filter)(const struct dirent *), int (*compar)());
 int getgroups(int size, gid_t *list);
 int fgetgrent_r(FILE *fp, struct group *gbuf, char *buf, size_t buflen, struct group **gbufp); /* real_func=pseudo_fgetgrent_r */
 int fgetpwent_r(FILE *fp, struct passwd *pbuf, char *buf, size_t buflen, struct passwd **pbufp); /* real_func=pseudo_fgetpwent_r */
